fix: [FFM-5086]: fix having to scroll for Back/Next buttons when content overflows container (#12582)
* fix: [FFM-5086]: fix having to scroll for Back/Next buttons when content overflows container
- also fixed stepper to not be hidden behind MarkdownViewer readme content

* fix: [FFM-5086]: fix issues found in PR
- stop scrolling when not needed in Onboarding Steps content
- add padding below stepper

--- a/src/modules/75-cf/pages/onboarding/OnboardingDetailPage.module.scss
+++ b/src/modules/75-cf/pages/onboarding/OnboardingDetailPage.module.scss
@@ -5,29 +5,10 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
-.container {
-  :global {
-    .bp3-tab-list {
-      box-shadow: 0 5px 10px -5px rgb(96 97 112 / 16%);
-
-      .bp3-tab {
-        margin-top: 0 !important;
-        padding-top: var(--spacing-small) !important;
-
-        &[id*='created-a-flag'] {
-          margin-left: var(--spacing-xlarge) !important;
-        }
-      }
-    }
-
-    .bp3-tab-panel {
-      margin-top: 0 !important;
-    }
-  }
+.scroll-overflow-y {
+  overflow-y: scroll;
 }
 
-.grid {
-  display: grid;
-  grid-auto-flow: row;
-  justify-content: start;
+.keep-on-top {
+  z-index: 1;
 }
